--- a/app/src/main/res/layout/activity_all_users.xml
+++ b/app/src/main/res/layout/activity_all_users.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
-        android:padding="15dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
         android:textColor="@color/blue">
 
     </android.support.v7.widget.RecyclerView>
