--- a/app/src/main/res/layout/manualenteralert.xml
+++ b/app/src/main/res/layout/manualenteralert.xml
@@ -22,7 +22,7 @@
         android:layout_width="235dp"
         android:layout_height="wrap_content"
         android:id="@+id/manAddress"
-        android:hint="Location Name"
+        android:hint="Location Address"
         android:textColor="@color/white"
         android:textColorHint="@color/white"/>
 
