--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -58,6 +58,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="Address"
+            android:layout_marginBottom="10dp"
             android:textColor="@color/aqua"
             android:textSize="20dp" />
 
@@ -91,6 +92,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/roundbuttonlight"
             android:text="Send Friend Request" />
 
@@ -102,7 +104,7 @@
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/roundbuttonlight"
-            android:text="Test" />
+            android:text="" />
 
     </RelativeLayout>
 
